syntax = "proto3";
import "akkaserverless/annotations.proto";

package actor.messaging.domain;


message SendMessageDtoM {
  string user_id = 1 [(akkaserverless.field).entity_key = true];
  string message = 2;
}
